# minion

./: .dockerignore  .gitignore  .gitmodules  .pre-commit-config.yaml  AGENTS.md  ASSIGNMENT_LOGIC_SUMMARY.md  ASYNC_IMPLEMENTATION_SUMMARY.md  ASYNC_TESTING_GUIDE.md  ASYNC_TOOLS_SUMMARY.md  ASYNC_TOOL_IMPLEMENTATION_SUMMARY.md  ASYNC_TOOL_SUPPORT.md  CLAUDE.md  Dockerfile  LICENSE  MANIFEST.in  README.md  README.rdoc  README_MCP.md  README_browser_tool.md  SECURITY.md  async_tool_support.md  autonomous_browser_agent.py  codeminion_fix_analysis.md  conftest.py  docker-compose.yml  lmp.py  pyproject.toml  pyrightconfig.json  pytest.ini  requirements.txt  setup.py  simple_mcp_example.py  simple_parallel_test.py  startup_script.sh  startup_summary.md  style.md  test.py  test_async_tools.py  test_bedrock_async.py  test_brain_fix.py  (+14 more)
.devcontainer/: devcontainer.json  docker-compose.yaml  postCreateCommand.sh
.minion/: todos_a7285dcf-2712-41f7-98f3-712d8de19639.json  todos_be5cdcf8-31dc-4b54-8df4-648afee299da.json
config/: .env.example  config.yaml.example  gsm8k_re2.json  gsm8k_re2_with_rephrase.json
docker/: Readme.md  python.Dockerfile  simple.Dockerfile
docs/: CodeMinion异步工具支持指南.md  SKILLS_AGENT_INTEGRATION.md  SKILLS_DESIGN.md  SKILLS_IMPLEMENTATION_SUMMARY.md  STREAMING_ARCHITECTURE_UPDATE.md  TOOL_OBSERVATION_FORMATTING.md  advanced_tool_use.md  agent_route_parameter_guide.md  auto_compact.md  auto_decay.md  auto_tool_conversion.md  bedrock_async_provider_guide.md  bedrock_provider_guide.md  benchmarks.md  brain_async_tools_usage.md  brain_python_env.md  brain_usage.md  check_improve_multimodal_support.md  code_agent_improvements.md  code_minion_extract_improvements.md  code_minion_smolagents_integration.md  skills.md  (+13 more)
(+315 files in other folders)
