[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "minionx"
version = "0.1.1"
authors = [
    {name = "femto", email = "femtowin@gmail.com"},
]
description = "A powerful AI agent framework for Python"
readme = "README.md"
requires-python = ">=3.8"
license = "MIT"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]
keywords = ["ai", "agent", "framework", "llm", "automation"]
dependencies = [
    "loguru",
    "python-dotenv",
    "litellm",
    "tenacity",
    "rpyc",
    "aiofiles",
    "colorama",
    "tree_sitter",
    "tree_sitter_python",
    "jinja2",
    "intercode-bench",
    "mem0ai",
    "ollama",
    "nltk",
    "matplotlib",
    "SQLAlchemy",
    "sqlmodel",
    "aiosqlite",
    "asyncpg",
    "dill",
    "antlr4-python3-runtime",
    "ell-ai",
    "optillm",
    "jsonlines>=3.1.0",
    "datasets",
    "astunparse",
    "accelerate",
    "astor",
    "graphviz",
    "astroid",
    "pysnooper",
    "azure-identity",
    "azure-ai-inference"
]

[project.urls]
Homepage = "https://github.com/femto/minion"
Repository = "https://github.com/femto/minion.git"

[project.scripts]
minion = "minion.cli:app"

[project.optional-dependencies]
dev = ["pytest", "black", "ruff", "pytest-asyncio"]
google = ["google-adk", "litellm"]
all = ["minionx[dev,google]"]

[tool.hatch.build.targets.wheel]
packages = ["minion"] 